<resources>
    <string name="app_name">Expense Journal</string>
    <string name="failure_db_error">Database Error: Please try after sometime.</string>
    <string name="action_ok">Okay</string>
    <string name="friendly_date_and_user">
        &lt;font color="#757575"> &lt;b>%1s &lt;/b>&lt;/font>
        &lt;font color="#426DDC"> &lt;b>To&lt;/b>: %2s &lt;/font>
    </string>

    <string name="details_of_spending">Please specify the details of you spending.</string>
    <string name="essential">Essential</string>
    <string name="casual">Casual</string>
    <string name="anxiety">Anxiety</string>
    <string name="spending">Spending</string>
    <string name="username">Username</string>
    <string name="daily_spending_max">Daily spending max</string>
    <string name="weekly_spending_max">Weekly spending max</string>
    <string name="monthly_spending_max">Monthly spending max</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="update_profile">Update profile</string>
    <string name="rrr">₹</string>

    <string name="string_limit_monthly">
      Monthly Limit :    &lt;font color="#426DDC">&lt;b>%2s&lt;/b>&lt;/font>
    </string>
    <string name="string_limit_weekly">
      Weekly Limit :     &lt;font color="#426DDC">&lt;b>%2s&lt;/b>&lt;/font>
    </string>
    <string name="string_limit_daily">
      Daily Limit :     &lt;font color="#426DDC">&lt;b>%2s&lt;/b>&lt;/font>
    </string>
    <string name="string_welcome_user">
      Hello &lt;b>%1s&lt;/b>
    </string>
    <string name="string_total_year">
      &lt;b>%1s&lt;/b>: &lt;b>%2s&lt;/b>
    </string>
    <string name="string_total_month">
       &lt;b>%1s&lt;/b>: &lt;b>%2s&lt;/b>
    </string>

    <string name="string_opinion_overspent">
      &lt;font color="#FF0000"> overspent: &lt;b>%1s&lt;/b>&lt;/font>
    </string>

    <string name="string_opinion_safe">
        &lt;font color="#8BC34A"> Safe to spend: &lt;b>%1s&lt;/b>&lt;/font>
    </string>

    <string name="string_friendly_week">
        &lt;font color="#002c56">&lt;b>%1s&lt;/b>&lt;/font>
        &lt;font color="#426DDC"> week &lt;/font>
    </string>

    <string name="string_friendly_date_daily">
        &lt;font color="#000"> &lt;b>%1s&lt;/b>&lt;/font>
        &lt;font color="#757575">%2s&lt;/font>
    </string>

    <string name="string_amount_safe">
        &lt;font color="#002c56"> &lt;b>%1s&lt;/b>&lt;/font>
    </string>

    <string name="string_amount_danger">
        &lt;font color="#FF2E63"> &lt;b>%1s&lt;/b>&lt;/font>
    </string>

    <string name="add_expense">Add Expense</string>
    <string name="amount_is_spent_for">Amount is spent for…</string>
    <string name="received_by">Received by</string>
    <string name="spending_category">Spending category</string>
    <string name="submit">Submit</string>
    <string name="amount">amount</string>
    <string name="profile">Profile</string>
    <string name="search_amp_history"><![CDATA[Search & History]]></string>
    <string name="your_country_code">Please enter your country code (eg. US, IN, JP etc…)</string>

    <string name="error_invalid_username">Incorrect Username</string>
    <string name="error_invalid_amount">Invalid amount</string>
    <string name="error_invalid_desc">Invalid description</string>
    <string name="error_invalid_reference">Invalid reference</string>
    <string name="error_invalid_country_code">Invalid country code</string>
    <string name="recent">Recent</string>
    <string name="transactions_details">Transactions Details</string>
    <string name="weekly_limit">Weekly Limit: 00:00</string>
    <string name="month">Month:</string>
    <string name="total">Total: 00:00</string>
    <string name="year">Year:</string>
    <string name="daily_limit">Daily Limit: 00:00</string>
    <string name="add_spending_desc">Add spending</string>
    <string name="menu_img_desc">menu</string>
    <string name="monthly_limit">Monthly Limit: 00:00</string>
    <string name="close_img_desc">close</string>
</resources>