<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /*
  ~  Copyright (C) 2023 Harshal Tilay
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/back"
            android:rotationY="180"
            android:src="@drawable/ic_bullet" />

        <TextView
            android:id="@+id/temp_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsbold"
            android:lineSpacingExtra="25sp"
            android:text="@string/update_profile"
            android:textColor="@color/text_dark_blue_1"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_rect_border_blue_1"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsbold"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:lines="1"
            android:nextFocusForward="@+id/amount_daily_input"
            android:textColor="@color/button_bg_blue"
            android:textColorHint="#A1887F"
            android:textSize="16sp"
            android:textStyle="normal" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/daily_spending_max"
            android:textColor="@color/button_bg_blue"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/amount_daily_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:digits="1234567890"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:hint="@string/rrr"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lineSpacingExtra="33sp"
            android:lines="1"
            android:minWidth="194dp"
            android:nextFocusForward="@+id/description_input"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/orange"
            android:textColorHint="#FF5722"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/weekly_spending_max"
            android:textColor="@color/button_bg_blue"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/amount_weekly_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:digits="1234567890"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:hint="@string/rrr"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lineSpacingExtra="33sp"
            android:lines="1"
            android:minWidth="194dp"
            android:nextFocusForward="@+id/description_input"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/orange"
            android:textColorHint="#FF5722"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/monthly_spending_max"
            android:textColor="@color/button_bg_blue"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/amount_monthly_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:digits="1234567890"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:hint="@string/rrr"
            android:imeOptions="actionNone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lineSpacingExtra="33sp"
            android:lines="1"
            android:minWidth="194dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/orange"
            android:textColorHint="#FF5722"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/update_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:background="@drawable/roundrect_bg_button"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/white"
            android:text="@string/update"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:background="@drawable/roundrect_bg_button"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
